--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,8 @@
 @import "tailwindcss";
+
+body {
+    font-family: "Bricolage Grotesque", serif;
+    background-image: url("assets/grid.svg"); /* SVG content encoded */
+    background-size: 150px 150px;
+    background-repeat: repeat;
+}
