Added ellipsis for long description

--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 
 body {
     font-family: "Bricolage Grotesque", serif;
-    background-image: url("assets/grid.svg"); /* SVG content encoded */
+    background-image: url("assets/grid.svg"); 
     background-size: 150px 150px;
     background-repeat: repeat;
 }
